# mullvad-router-setup

./: .gitignore  README.md  add-port-fw.sh  architecture.md  configure.sh  connect.sh  dummy-program  homepage.sh  login.html  mullvad-add.sh  mullvad-forget.sh  pre-release.sh  restart.sh  setup.sh  style.css  vultr-add.sh  vultr-destroy.sh  vultr-list.sh  vultr-setup.sh  webserver.py  website.sh
src/: connect.py  pre-compile.py  pre-release.py  router-website-service.py  setup.py  util.py
src/api/: mullvad.py  vultr.py
src/config/: config.py  config_access.py  data_access.py  transformer.py
src/data/: config.py  mullvad.py  network.py  vpn.py  vultr.py
src/network/: firewall.py  ip.py  nc.py  wg.py
src/services/: BuildTools.py  CustomService.py  DHCPService.py  DHCPv6Service.py  Grub.py  InterfacesService.py  NameService.py  ProxyService.py  RAService.py  service.py  services.py
src/test/: transformer.py
src/trafficmon/: globals.py
src/util/: bash.py  typing.py  util.py
src/web/: auth.py  context.py  form.py  route.py  static.py
src/web/commands/: add_port_forward.py  delete_port_forward.py  mullvad_add.py  mullvad_forget.py  param_type.py  program.py  programs.py  restart.py  set_vpn.py  vultr_add.py  vultr_destroy.py  vultr_link.py
src/web/components/: template.py
src/web/pages/: homepage.py  html_util.py  template.py
static/: style.css
traffic-monitor/: CMakeLists.txt  pre-compile.sh
traffic-monitor/src/common/: debug.c  debug.h  global-vars.h  iplookup.4.c  iplookup.6.c  iplookup.c  iplookup.ctemplate  iplookup.h  iplookup.template.h  ipmacros.h  macro-stack.h  macro-utils.h  protocol.c  protocol.h
traffic-monitor/src/kernel/: Makefile.in  debug.c  debug.h  iplookup.c  iplookup.h  mock-nf.h  net.h  nethooks.c  nethooks.h  procfile.c  procfile.h  readqueue.c  readqueue.h  test_interface.c  test_interface.h  trafficmon.c
traffic-monitor/src/user/: conn-monitor.cpp  filter.cpp  helloworld.cpp  ipfilter-cli.cpp  ipfilter.cpp  ipfilter.h  net-simulator.cpp  reading-thread.cpp  reading-thread.h  test.cpp  testnet.cpp  testnet.h  trafficmon.cpp  trafficmon.h  util.cpp  util.h
traffic-monitor/src/user/data/: connection.h  ipaddress.h  ippair.h  ipprops.cpp  ipprops.h  iprule.h  query.h
traffic-monitor/src/user/recycle-bin/: barrier.cpp  filter.cpp
traffic-monitor/src/user/test/: debug-kernel.cpp  debug-shm-monitor.cpp  net-simulator.cpp  test-context-kernel.cpp  test-context-user.cpp  test-context.h  test-generator.cpp  test-generator.h  test-kernel.cpp  test-kernel.h  test-user.cpp  test-user.h  test.cpp  testnet.h
